--- a/data/notebooks/sip/TCI_NDVI.ipynb
+++ b/data/notebooks/sip/TCI_NDVI.ipynb
@@ -52,7 +52,8 @@
     "                 \"height\": out_image.shape[1],\n",
     "                 \"width\": out_image.shape[2],\n",
     "                 \"transform\": out_transform,\n",
-    "                 \"nodata\": 0,})\n",
+    "                 \"nodata\": 0,\n",
+    "                        })\n",
     "\n",
     "    with rasterio.open(output_path, \"w\", **out_meta) as dest:\n",
     "        dest.update_tags(name=name, start_date=date, end_date=date)\n",
@@ -518,7 +519,7 @@
     "RESULTS_DIR = os.path.join(BASE, \"results/sip\")\n",
     "\n",
     "SIP_DIR = os.path.join(BASE, \"notebooks/sip\")\n",
-    "COLORMAP_BRBG = os.path.join(SIP_DIR, \"brbg.npy\") \n",
+    "COLORMAP_BRBG = os.path.join(SIP_DIR, \"magma.npy\") \n",
     "COLORS = prepare_colors(COLORMAP_BRBG)\n",
     "\n",
     "\n",
@@ -585,9 +586,23 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'36UYA': {'paths': {'NIR': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B08_10m.jp2',\n",
+       "   'RED': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B04_10m.jp2',\n",
+       "   'TCI': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_TCI_10m.jp2'},\n",
+       "  'date': '20200923'}}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# filtered"
+    "filtered"
    ]
   },
   {
@@ -639,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,24 +664,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/sip/tmpu_0imx3b\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/sip/results\n",
       "\n",
       "Calculating TCI:\n",
       "\n",
       "\n",
       "Execution for tile 36UYA\n",
       "Calculating TCI and NDVI for given AOI...\n",
-      "Save TCI image path: /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
-      "Temporary TCI output path: /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp to /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
-      "/home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_TCI_10m_epsg_3857.tif\n",
+      "Save TCI image path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "Temporary TCI output path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp to /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m_epsg_3857.tif\n",
       "Execution for tile 36UYA finished\n",
       "\n",
       "Calculating NDVI:\n",
@@ -674,12 +689,12 @@
       "\n",
       "Execution for tile 36UYA\n",
       "Calculating TCI and NDVI for given AOI...\n",
-      "Save NDVI image path: /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
+      "Save NDVI image path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
       "Calculating NDVI...\n",
       "NDVI calculation finished\n",
-      "Temporary NDVI output path: /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp to /home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
-      "/home/jovyan/work/notebooks/sip/tmpu_0imx3b/Pechenihy_T36UYA_20200923T083659_NDVI_10m_epsg_3857.tif\n",
+      "Temporary NDVI output path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp to /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
+      "/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m_epsg_3857.tif\n",
       "Execution for tile 36UYA finished\n",
       "\n",
       "CREATING MOSAIC\n",
