--- a/data/notebooks/example/TCI_NDVI.ipynb
+++ b/data/notebooks/example/TCI_NDVI.ipynb
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jovyan/work/notebooks/sip/Pechenihy.geojson'"
+       "'/home/jovyan/work/notebooks/example/Pechenihy.geojson'"
       ]
      },
      "execution_count": 20,
@@ -499,9 +499,7 @@
     }
    ],
    "source": [
-    "# os.environ['AOI'] = os.path.join(BASE, \"notebooks/sip/Kharkiv.geojson\") # Pechenihy.geojson\n",
-    "\n",
-    "aoi_path = os.getenv('AOI') \n",
+    "aoi_path = os.getenv(\"AOI\", default=os.path.join(BASE, \"notebooks/example/Pechenihy.geojson\")) \n",
     "if not aoi_path:\n",
     "    raise RuntimeError(\"Add AOI env var for calculations\")\n",
     "    \n",
@@ -516,10 +514,10 @@
    "source": [
     "API_KEY = os.path.join(BASE, \".secret/sentinel2_google_api_key.json\")\n",
     "LOAD_DIR = os.path.join(BASE, \"satellite_imagery\")\n",
-    "RESULTS_DIR = os.path.join(BASE, \"results/sip\")\n",
+    "RESULTS_DIR = os.path.join(BASE, \"results/example\")\n",
     "\n",
-    "SIP_DIR = os.path.join(BASE, \"notebooks/sip\")\n",
-    "COLORMAP_BRBG = os.path.join(SIP_DIR, \"magma.npy\") \n",
+    "SIP_DIR = os.path.join(BASE, \"notebooks/example\")\n",
+    "COLORMAP_BRBG = os.path.join(SIP_DIR, \"brbg.npy\") \n",
     "COLORS = prepare_colors(COLORMAP_BRBG)\n",
     "\n",
     "\n",
@@ -566,13 +564,13 @@
      "text": [
       "Overlap tiles: ['36UYA']\n",
       "Loading images for tile: 36UYA...\n",
-      "Dates from 2020-11-14 to 2020-12-04\n",
+      "Dates from 2020-11-17 to 2020-12-07\n",
       "No matching images\n",
-      "Dates from 2020-10-25 to 2020-11-14\n",
+      "Dates from 2020-10-28 to 2020-11-17\n",
       "No matching images\n",
-      "Dates from 2020-10-05 to 2020-10-25\n",
+      "Dates from 2020-10-08 to 2020-10-28\n",
       "No matching images\n",
-      "Dates from 2020-09-15 to 2020-10-05\n",
+      "Dates from 2020-09-18 to 2020-10-08\n",
       "Loading images for tile 36UYA finished\n"
      ]
     }
@@ -590,8 +588,8 @@
     {
      "data": {
       "text/plain": [
-       "{'36UYA': {'paths': {'NIR': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B08_10m.jp2',\n",
-       "   'RED': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B04_10m.jp2',\n",
+       "{'36UYA': {'paths': {'RED': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B04_10m.jp2',\n",
+       "   'NIR': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B08_10m.jp2',\n",
        "   'TCI': '/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_TCI_10m.jp2'},\n",
        "  'date': '20200923'}}"
       ]
@@ -620,7 +618,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jovyan/work/notebooks/sip'"
+       "'/home/jovyan/work/notebooks/example'"
       ]
      },
      "execution_count": 25,
@@ -640,7 +638,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jovyan/work/results/sip'"
+       "'/home/jovyan/work/results/example'"
       ]
      },
      "execution_count": 26,
@@ -671,17 +669,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/sip/results\n",
+      "Сreated temporary directory for calculations: /home/jovyan/work/notebooks/example/tmpl6pb9zv2\n",
       "\n",
       "Calculating TCI:\n",
       "\n",
       "\n",
       "Execution for tile 36UYA\n",
       "Calculating TCI and NDVI for given AOI...\n",
-      "Save TCI image path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
-      "Temporary TCI output path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp to /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
-      "/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_TCI_10m_epsg_3857.tif\n",
+      "Save TCI image path: /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "Temporary TCI output path: /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif.temp to /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_TCI_10m.tif\n",
+      "/home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_TCI_10m_epsg_3857.tif\n",
       "Execution for tile 36UYA finished\n",
       "\n",
       "Calculating NDVI:\n",
@@ -689,12 +687,12 @@
       "\n",
       "Execution for tile 36UYA\n",
       "Calculating TCI and NDVI for given AOI...\n",
-      "Save NDVI image path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
+      "Save NDVI image path: /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
       "Calculating NDVI...\n",
       "NDVI calculation finished\n",
-      "Temporary NDVI output path: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp\n",
-      "Rename temp file: /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp to /home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
-      "/home/jovyan/work/notebooks/sip/results/Pechenihy_T36UYA_20200923T083659_NDVI_10m_epsg_3857.tif\n",
+      "Temporary NDVI output path: /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp\n",
+      "Rename temp file: /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif.temp to /home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_NDVI_10m.tif\n",
+      "/home/jovyan/work/notebooks/example/tmpl6pb9zv2/Pechenihy_T36UYA_20200923T083659_NDVI_10m_epsg_3857.tif\n",
       "Execution for tile 36UYA finished\n",
       "\n",
       "CREATING MOSAIC\n",
@@ -742,41 +740,6 @@
     "        generate_mosaic(layer, files_to_mosaic, NAME, start_date, end_date, RESULTS_DIR)\n",
     "        print(\"\\nGenerating mosaic finished\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
