--- a/data/notebooks/pbd/BoundariesDetection.ipynb
+++ b/data/notebooks/pbd/BoundariesDetection.ipynb
@@ -488,12 +488,12 @@
     {
      "data": {
       "text/plain": [
-       "{'36UYA': [('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/MTD_TL.xml',\n",
-       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/MTD_TL.xml'),\n",
-       "  ('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_TCI_10m.jp2',\n",
+       "{'36UYA': [('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_TCI_10m.jp2',\n",
        "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/IMG_DATA/R10m/T36UYA_20200923T083659_TCI_10m.jp2'),\n",
        "  ('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B08_10m.jp2',\n",
-       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/IMG_DATA/R10m/T36UYA_20200923T083659_B08_10m.jp2')]}"
+       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/IMG_DATA/R10m/T36UYA_20200923T083659_B08_10m.jp2'),\n",
+       "  ('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/MTD_TL.xml',\n",
+       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/MTD_TL.xml')]}"
       ]
      },
      "execution_count": 10,
@@ -561,14 +561,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337\n"
+      "/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337\n",
+      "Processing 36UYA...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [06:24<00:00, 384.78s/it]\n"
+      "100%|██████████| 1/1 [06:49<00:00, 409.40s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing 36UYA\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -739,6 +754,7 @@
     "        except Exception as ex:\n",
     "            print(f\"Error for {tile.tileID}: {str(ex)}\")\n",
     "        else:\n",
+    "            print(f\"Processing {tile.tileID}...\")\n",
     "    \n",
     "            raster_path = preprocess_sentinel_raw_data(\n",
     "                save_path=tmpdirname,\n",
@@ -764,6 +780,8 @@
     "        \n",
     "\n",
     "            result_df = pd.concat([result_df, df])\n",
+    "            \n",
+    "            print(f\"Finished processing {tile.tileID}\")\n",
     "    # print(result_df)\n",
     "\n",
     "save_path = os.path.join(RESULTS_DIR, f\"{origin_name}_prediction.geojson\")\n",
