13445: add polygons processing

--- a/data/notebooks/pbd/BoundariesDetection.ipynb
+++ b/data/notebooks/pbd/BoundariesDetection.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,19 +281,42 @@
     "    return [shape(poly) for poly, _ in polygons]\n",
     "\n",
     "\n",
-    "def save_polygons(polygons, crs, save_path, dst_crs=\"EPSG:4326\"):\n",
-    "    if len(polygons) == 0:\n",
+    "def process_polygons(result_df, current_crs, limit=500, dst_crs=\"EPSG:4326\"):\n",
+    "    \"\"\"\n",
+    "    Prepare result Dataframe with polygons\n",
+    "\n",
+    "        Parameters:\n",
+    "            result_df (pd.DataFrame): Result DataFrame\n",
+    "            limit (int): min area for polygon in m2\n",
+    "        Returns:\n",
+    "            GeoDataFrame: GeoDataFrame ready for saving\n",
+    "    \"\"\"\n",
+    "        \n",
+    "    gdf = gpd.GeoDataFrame(result_df)\n",
+    "    gdf.crs = current_crs\n",
+    "    \n",
+    "    # fix invalid polygons\n",
+    "    gdf[\"geometry\"] = gdf.apply(lambda row: row.geometry.buffer(0), axis=1)\n",
+    "    # select only valid polygons\n",
+    "    gdf = gdf.loc[gdf.is_valid]\n",
+    "\n",
+    "    # print(gdf.crs)\n",
+    "    gdf = gdf.loc[gdf.area >= limit]\n",
+    "    \n",
+    "    gdf.to_crs(dst_crs, inplace=True)\n",
+    "    \n",
+    "    return gdf\n",
+    "\n",
+    "\n",
+    "def save_polygons(gdf, save_path):\n",
+    "    if len(gdf) == 0:\n",
     "        print('No polygons detected.')\n",
     "        return\n",
     "\n",
     "    directory = os.path.dirname(save_path)\n",
     "    if not os.path.exists(directory):\n",
     "        os.makedirs(directory)\n",
-    "    \n",
-    "    gdf = gpd.GeoDataFrame(polygons)\n",
-    "    gdf.crs = meta['crs']\n",
-    "    gdf.to_crs(dst_crs, inplace=True)\n",
-    "    \n",
+    "        \n",
     "    save_path = save_path + \".temp\" \n",
     "    gdf.to_file(save_path, driver='GeoJSON')\n",
     "    os.rename(save_path, save_path[:-5])\n",
@@ -324,10 +347,10 @@
     "\n",
     "BANDS = {'TCI', 'B08', }\n",
     "\n",
-    "# CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 40.0, }\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
+    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 40.0, }\n",
+    "# CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
     "\n",
-    "DATE = \"2020-09-23\" #\"2019-06-04\""
+    "DATE = \"2019-06-04\" # \"2020-09-23\""
    ]
   },
   {
@@ -338,7 +361,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jovyan/work/notebooks/pbd/Pechenihy.geojson'"
+       "'/home/jovyan/work/notebooks/pbd/plot_boundaries_20190604.geojson'"
       ]
      },
      "execution_count": 5,
@@ -347,7 +370,7 @@
     }
    ],
    "source": [
-    "aoi_path = os.getenv(\"AOI\", os.path.join(BASE, \"notebooks/pbd/Pechenihy.geojson\")) \n",
+    "aoi_path = os.getenv(\"AOI\", os.path.join(BASE, \"notebooks/pbd/plot_boundaries_20190604.geojson\")) # \"notebooks/pbd/Pechenihy.geojson\"\n",
     "# \"notebooks/pbd/plot_boundaries_20190604.geojson\"\n",
     "if not aoi_path:\n",
     "    raise RuntimeError(\"Add AOI env var for calculations\")\n",
@@ -405,9 +428,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>POLYGON Z ((36.78360 50.04479 0.00000, 36.7822...</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <td>17SLD</td>\n",
+       "      <td>POLYGON Z ((-83.05615 39.18668 0.00000, -83.31...</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17SKD</td>\n",
+       "      <td>POLYGON Z ((-83.31631 39.20046 0.00000, -83.39...</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -415,7 +444,8 @@
       ],
       "text/plain": [
        "  tileID                                           geometry    img_date\n",
-       "0  36UYA  POLYGON Z ((36.78360 50.04479 0.00000, 36.7822...  2020-09-23"
+       "0  17SLD  POLYGON Z ((-83.05615 39.18668 0.00000, -83.31...  2019-06-04\n",
+       "1  17SKD  POLYGON Z ((-83.31631 39.20046 0.00000, -83.39...  2019-06-04"
       ]
      },
      "execution_count": 7,
@@ -468,8 +498,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading images for tile: 36UYA...\n",
-      "Loading images for tile 36UYA finished\n"
+      "Loading images for tile: 17SLD...\n",
+      "Loading images for tile 17SLD finished\n",
+      "Loading images for tile: 17SKD...\n",
+      "Loading images for tile 17SKD finished\n"
      ]
     }
    ],
@@ -488,12 +520,18 @@
     {
      "data": {
       "text/plain": [
-       "{'36UYA': [('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_TCI_10m.jp2',\n",
-       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/IMG_DATA/R10m/T36UYA_20200923T083659_TCI_10m.jp2'),\n",
-       "  ('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/T36UYA_20200923T083659_B08_10m.jp2',\n",
-       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/IMG_DATA/R10m/T36UYA_20200923T083659_B08_10m.jp2'),\n",
-       "  ('/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337/MTD_TL.xml',\n",
-       "   'L2/tiles/36/U/YA/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337.SAFE/GRANULE/L2A_T36UYA_A018537_20200923T083655/MTD_TL.xml')]}"
+       "{'17SLD': [('/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200/T17SLD_20190604T161901_TCI_10m.jp2',\n",
+       "   'L2/tiles/17/S/LD/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200.SAFE/GRANULE/L2A_T17SLD_A020629_20190604T162855/IMG_DATA/R10m/T17SLD_20190604T161901_TCI_10m.jp2'),\n",
+       "  ('/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200/MTD_TL.xml',\n",
+       "   'L2/tiles/17/S/LD/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200.SAFE/GRANULE/L2A_T17SLD_A020629_20190604T162855/MTD_TL.xml'),\n",
+       "  ('/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200/T17SLD_20190604T161901_B08_10m.jp2',\n",
+       "   'L2/tiles/17/S/LD/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200.SAFE/GRANULE/L2A_T17SLD_A020629_20190604T162855/IMG_DATA/R10m/T17SLD_20190604T161901_B08_10m.jp2')],\n",
+       " '17SKD': [('/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200/T17SKD_20190604T161901_B08_10m.jp2',\n",
+       "   'L2/tiles/17/S/KD/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200.SAFE/GRANULE/L2A_T17SKD_A020629_20190604T162855/IMG_DATA/R10m/T17SKD_20190604T161901_B08_10m.jp2'),\n",
+       "  ('/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200/T17SKD_20190604T161901_TCI_10m.jp2',\n",
+       "   'L2/tiles/17/S/KD/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200.SAFE/GRANULE/L2A_T17SKD_A020629_20190604T162855/IMG_DATA/R10m/T17SKD_20190604T161901_TCI_10m.jp2'),\n",
+       "  ('/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200/MTD_TL.xml',\n",
+       "   'L2/tiles/17/S/KD/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200.SAFE/GRANULE/L2A_T17SKD_A020629_20190604T162855/MTD_TL.xml')]}"
       ]
      },
      "execution_count": 10,
@@ -527,36 +565,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/satellite_imagery/S2B_MSIL2A_20200923T083659_N0214_R064_T36UYA_20200925T161337\n",
-      "Processing 36UYA...\n"
+      "/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SLD_20190604T204200\n",
+      "Processing 17SLD...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [06:49<00:00, 409.40s/it]"
+      " 50%|█████     | 1/2 [03:45<03:45, 225.15s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished processing 36UYA\n"
+      "Finished processing 17SLD\n",
+      "/home/jovyan/work/satellite_imagery/S2A_MSIL2A_20190604T161901_N0212_R040_T17SKD_20190604T204200\n",
+      "Processing 17SKD...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [05:23<00:00, 161.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing 17SKD\n"
      ]
     },
     {
@@ -596,44 +650,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>POLYGON ((36.78341 50.04470, 36.78339 50.04452...</td>\n",
-       "      <td>Pechenihy_0</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>POLYGON ((36.78444 50.04007, 36.78444 50.03998...</td>\n",
-       "      <td>Pechenihy_1</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <td>MULTIPOLYGON (((-83.07219 39.38320, -83.07219 ...</td>\n",
+       "      <td>plot_boundaries_20190604_1</td>\n",
+       "      <td>17SLD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>POLYGON ((36.79111 50.03959, 36.79110 50.03950...</td>\n",
-       "      <td>Pechenihy_2</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <td>POLYGON ((-83.08934 39.38217, -83.08864 39.382...</td>\n",
+       "      <td>plot_boundaries_20190604_2</td>\n",
+       "      <td>17SLD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>POLYGON ((36.78399 50.03964, 36.78398 50.03955...</td>\n",
-       "      <td>Pechenihy_3</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>8</th>\n",
+       "      <td>POLYGON ((-83.10794 39.37931, -83.10748 39.379...</td>\n",
+       "      <td>plot_boundaries_20190604_8</td>\n",
+       "      <td>17SLD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>POLYGON ((36.79429 50.03912, 36.79427 50.03894...</td>\n",
-       "      <td>Pechenihy_4</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>14</th>\n",
+       "      <td>MULTIPOLYGON (((-83.10632 39.37925, -83.10632 ...</td>\n",
+       "      <td>plot_boundaries_20190604_14</td>\n",
+       "      <td>17SLD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>POLYGON ((-83.06693 39.37816, -83.06681 39.378...</td>\n",
+       "      <td>plot_boundaries_20190604_19</td>\n",
+       "      <td>17SLD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -644,81 +698,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2272</th>\n",
-       "      <td>POLYGON ((36.68955 49.85554, 36.68954 49.85545...</td>\n",
-       "      <td>Pechenihy_2272</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>1481</th>\n",
+       "      <td>POLYGON ((-83.35024 39.21007, -83.35013 39.210...</td>\n",
+       "      <td>plot_boundaries_20190604_1481</td>\n",
+       "      <td>17SKD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2273</th>\n",
-       "      <td>POLYGON ((36.70047 49.85456, 36.70046 49.85447...</td>\n",
-       "      <td>Pechenihy_2273</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>1482</th>\n",
+       "      <td>POLYGON ((-83.31670 39.20443, -83.31647 39.204...</td>\n",
+       "      <td>plot_boundaries_20190604_1482</td>\n",
+       "      <td>17SKD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2274</th>\n",
-       "      <td>POLYGON ((36.68298 49.85512, 36.68297 49.85503...</td>\n",
-       "      <td>Pechenihy_2274</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>1484</th>\n",
+       "      <td>POLYGON ((-83.34039 39.20270, -83.34004 39.202...</td>\n",
+       "      <td>plot_boundaries_20190604_1484</td>\n",
+       "      <td>17SKD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2275</th>\n",
-       "      <td>POLYGON ((36.78288 50.03977, 36.78287 50.03968...</td>\n",
-       "      <td>Pechenihy_2275</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>1486</th>\n",
+       "      <td>POLYGON ((-83.32383 39.20267, -83.32278 39.202...</td>\n",
+       "      <td>plot_boundaries_20190604_1486</td>\n",
+       "      <td>17SKD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2276</th>\n",
-       "      <td>POLYGON ((36.68851 49.85287, 36.68851 49.85278...</td>\n",
-       "      <td>Pechenihy_2276</td>\n",
-       "      <td>36UYA</td>\n",
-       "      <td>2020-09-23</td>\n",
-       "      <td>2020-09-23</td>\n",
+       "      <th>1487</th>\n",
+       "      <td>MULTIPOLYGON (((-83.31932 39.22762, -83.31932 ...</td>\n",
+       "      <td>plot_boundaries_20190604_1487</td>\n",
+       "      <td>17SKD</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>2019-06-04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2277 rows × 5 columns</p>\n",
+       "<p>1795 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               geometry              id  \\\n",
-       "0     POLYGON ((36.78341 50.04470, 36.78339 50.04452...     Pechenihy_0   \n",
-       "1     POLYGON ((36.78444 50.04007, 36.78444 50.03998...     Pechenihy_1   \n",
-       "2     POLYGON ((36.79111 50.03959, 36.79110 50.03950...     Pechenihy_2   \n",
-       "3     POLYGON ((36.78399 50.03964, 36.78398 50.03955...     Pechenihy_3   \n",
-       "4     POLYGON ((36.79429 50.03912, 36.79427 50.03894...     Pechenihy_4   \n",
-       "...                                                 ...             ...   \n",
-       "2272  POLYGON ((36.68955 49.85554, 36.68954 49.85545...  Pechenihy_2272   \n",
-       "2273  POLYGON ((36.70047 49.85456, 36.70046 49.85447...  Pechenihy_2273   \n",
-       "2274  POLYGON ((36.68298 49.85512, 36.68297 49.85503...  Pechenihy_2274   \n",
-       "2275  POLYGON ((36.78288 50.03977, 36.78287 50.03968...  Pechenihy_2275   \n",
-       "2276  POLYGON ((36.68851 49.85287, 36.68851 49.85278...  Pechenihy_2276   \n",
+       "                                               geometry  \\\n",
+       "1     MULTIPOLYGON (((-83.07219 39.38320, -83.07219 ...   \n",
+       "2     POLYGON ((-83.08934 39.38217, -83.08864 39.382...   \n",
+       "8     POLYGON ((-83.10794 39.37931, -83.10748 39.379...   \n",
+       "14    MULTIPOLYGON (((-83.10632 39.37925, -83.10632 ...   \n",
+       "19    POLYGON ((-83.06693 39.37816, -83.06681 39.378...   \n",
+       "...                                                 ...   \n",
+       "1481  POLYGON ((-83.35024 39.21007, -83.35013 39.210...   \n",
+       "1482  POLYGON ((-83.31670 39.20443, -83.31647 39.204...   \n",
+       "1484  POLYGON ((-83.34039 39.20270, -83.34004 39.202...   \n",
+       "1486  POLYGON ((-83.32383 39.20267, -83.32278 39.202...   \n",
+       "1487  MULTIPOLYGON (((-83.31932 39.22762, -83.31932 ...   \n",
        "\n",
-       "     tileID  start_date    end_date  \n",
-       "0     36UYA  2020-09-23  2020-09-23  \n",
-       "1     36UYA  2020-09-23  2020-09-23  \n",
-       "2     36UYA  2020-09-23  2020-09-23  \n",
-       "3     36UYA  2020-09-23  2020-09-23  \n",
-       "4     36UYA  2020-09-23  2020-09-23  \n",
-       "...     ...         ...         ...  \n",
-       "2272  36UYA  2020-09-23  2020-09-23  \n",
-       "2273  36UYA  2020-09-23  2020-09-23  \n",
-       "2274  36UYA  2020-09-23  2020-09-23  \n",
-       "2275  36UYA  2020-09-23  2020-09-23  \n",
-       "2276  36UYA  2020-09-23  2020-09-23  \n",
+       "                                 id tileID  start_date    end_date  \n",
+       "1        plot_boundaries_20190604_1  17SLD  2019-06-04  2019-06-04  \n",
+       "2        plot_boundaries_20190604_2  17SLD  2019-06-04  2019-06-04  \n",
+       "8        plot_boundaries_20190604_8  17SLD  2019-06-04  2019-06-04  \n",
+       "14      plot_boundaries_20190604_14  17SLD  2019-06-04  2019-06-04  \n",
+       "19      plot_boundaries_20190604_19  17SLD  2019-06-04  2019-06-04  \n",
+       "...                             ...    ...         ...         ...  \n",
+       "1481  plot_boundaries_20190604_1481  17SKD  2019-06-04  2019-06-04  \n",
+       "1482  plot_boundaries_20190604_1482  17SKD  2019-06-04  2019-06-04  \n",
+       "1484  plot_boundaries_20190604_1484  17SKD  2019-06-04  2019-06-04  \n",
+       "1486  plot_boundaries_20190604_1486  17SKD  2019-06-04  2019-06-04  \n",
+       "1487  plot_boundaries_20190604_1487  17SKD  2019-06-04  2019-06-04  \n",
        "\n",
-       "[2277 rows x 5 columns]"
+       "[1795 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,8 +818,10 @@
     "            print(f\"Finished processing {tile.tileID}\")\n",
     "    # print(result_df)\n",
     "\n",
-    "save_path = os.path.join(RESULTS_DIR, f\"{origin_name}_prediction.geojson\")\n",
-    "save_polygons(result_df, meta['crs'], save_path)"
+    "\n",
+    "gdf = process_polygons(result_df, meta['crs'])\n",
+    "save_path = os.path.join(RESULTS_DIR, f\"{origin_name}_prediction_vy_valid.geojson\")\n",
+    "save_polygons(gdf, save_path)"
    ]
   },
   {
