13445: upd last_date

--- a/data/notebooks/example/TCI_NDVI.ipynb
+++ b/data/notebooks/example/TCI_NDVI.ipynb
@@ -164,7 +164,7 @@
     "            dates.append(date)\n",
     "    \n",
     "    last_date = max(dates)\n",
-    "    last_date = datetime.strftime(date, '%Y%m%d')\n",
+    "    last_date = datetime.strftime(last_date, '%Y%m%d')\n",
     "    paths = list()\n",
     "    for path, _ in loaded:\n",
     "        if path.endswith('.jp2') and last_date in path:\n",
