13445: rn result file

--- a/data/notebooks/pbd/BoundariesDetection.ipynb
+++ b/data/notebooks/pbd/BoundariesDetection.ipynb
@@ -962,7 +962,7 @@
     "\n",
     "\n",
     "gdf = process_polygons(result_df, meta['crs'])\n",
-    "save_path = os.path.join(RESULTS_DIR, f\"{origin_name}_prediction_vy1.geojson\")\n",
+    "save_path = os.path.join(RESULTS_DIR, f\"{origin_name}_prediction.geojson\")\n",
     "print(save_path)\n",
     "save_polygons(gdf, save_path)"
    ]
